# ml-Flow-pyspark

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  ml_flow_pyspark.ipynb  mlflow.db  params.yaml  pyproject.toml  render.yaml  requirements.txt  run_app.bat  run_pipeline.bat  tmp_inspect.py  tmp_inspect_all_pyfuncs.py  tmp_inspect_run.py  tmp_list_spark_artifact.py  tmp_spark_load_with_spark.py  tmp_spark_paths.py  tmp_test_spark_model.py
.github/workflows/: mlflow_pyspark.yml
mlruns/449094010042487962/: meta.yaml
mlruns/449094010042487962/4d1e6371b03d4246af30244e20c5efe9/: meta.yaml
mlruns/449094010042487962/5a1649fc65d54f4bb12e8f131dbbb21c/: meta.yaml
mlruns/449094010042487962/6db65ffef9544f07a29d9958b1eafe01/: meta.yaml
mlruns/449094010042487962/721e1d5b8ab9487cb9007b91194811c3/: meta.yaml
mlruns/449094010042487962/be4bb064ea6f46e994471fd7d4351ec2/: meta.yaml
mlruns/449094010042487962/f66c414c4250483e9fae68c00bbf106c/: meta.yaml
mlruns/models/flood-probability-regressor/: meta.yaml
models/spark_pipeline/metadata/: .part-00000-c5d1e429-c285-4dff-b775-6a04fbe500fb-c000.txt.crc  part-00000-c5d1e429-c285-4dff-b775-6a04fbe500fb-c000.txt
scratch/: payload.json  payload_high.json  payload_low.json  payload_mixed.json  response.json  response_fix.json  response_high.json  test_load.py  test_spark_env.py
scripts/: setup_env.ps1  start.py
src/: best_model.py  config.py  data-ingestion.py  eda.py  prediction.py  preprocessing.py  spark_session.py  train.py
static/: index.html
tests/: test_api.py
(+195 files in other folders)
