[project]
name = "smit-group-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "kagglehub>=1.0.1",
    "mlflow>=3.12.0",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "pyspark>=3.5.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "dagshub>=0.3.37",
]
